resources/less/virkailija-application.less
/* ... */
.application-handling__list {
  cursor: pointer;
  overflow: auto;
  max-height: 120px;
  margin-bottom: 15px;
}

.application-handling__list--expanded {
  max-height: none;
}

.application-handling__list-row {
  padding: 0.5em;
  margin: 0;
  display: block;
  font-size: 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  .application-handling__list-row--applicant-unknown {
    color: gray;
  }
}

.application-handling__list-row:hover {
  background: #f5f5f5;
  border-radius: 3px;
}

.application-handling__list-header {
  color: #5E5E5E;
  font-size: 14px;
}

.application-handling__list-row--selected, .application-handling__list-row--selected:hover {
  border-radius: 3px;
  background-color: @selected-blue;
  color: #fff;
}

.application-handling__list-header:hover {
  background: none;
}

.application-handling__sort-arrow {
  color: @blue-text-color;
  font-weight: bold;
  margin-left: 5px;
  cursor: pointer;
}

.application-handling__basic-list-basic-column-header {
  color: @blue-text-color;
  cursor: pointer;
}

.application-handling__list-row--applicant {
  width: 25%;
  display: inline-block;
}

.application-handling__list-row--time {
  width: 20%;
  display: inline-block;
}

.application-handling__list-row--time-day {
  width: 25px;
  display: inline-block;
}

.application-handling__list-row--score {
  width: 10%;
  display: inline-block;
}

.application-handling__list-row--state {
  width: 15%;
  display: inline-block;
}

.application-handling__list-row--selection {
  width: 30%;
  display: inline-block;
}

.application-handling__list-row-email-icon {
  margin-left: 10px;
}

.application-handling__list-row-email-icon--not-selected {
  color: @blue-text-color;
}

.application-handling__list-loading-indicator {
  text-align: center;
  width: 100%;
  margin-top: 40px;
  margin-bottom: 1000px;
}

.application-handling__list-loading-indicator > i {
  font-size: 50px;
  .spin
}

.application-handling__detail-container {
  position: relative;
  padding: 20px 85px 15px 85px;
}

.application-handling__review-area {
  display: flex;
  min-height: 1200px; // floating review bar must be shorter than review area
}

.application-handling__review {
  color: @text-color;
  font-size: 14px;
  background-color: @very-light-gray;
  min-width: 407px;
  border-top: solid @review-separator-color 1px;
  padding: 15px;
  width: 360px;
  margin-left: 35px;
  .application-handling-webkit-scrollbar-mixin;
}

.application-handling__review-outer-container {
  padding-right: 5px;
  position: relative;
}

.application-handling__review-inner-container {
  height: 100%;
  overflow-y: auto;
}

.application-handling__floating-application-review-placeholder {
  width: 679px;
  visibility: hidden;
}

.application-handling__review-floating {
  position: fixed;
  top: 43px;
  right: 85px;
  padding-right: 8px;
  height: 100%;
  padding-bottom: 50px;
}

.application__handling-heading {
  margin-bottom: 15px;
}

.application-handling__review-area-main-heading-container {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  margin-top: -7px;
  margin-bottom: 7px;
}

.application-handling__review-area-main-heading {
  display: inline-block;
  color: @text-color;
  margin-top: 0px;
  margin-bottom: 0px;
  font-size: 22px;
  .semibold;
}

.application-handling__review-area-main-heading-name-row {
  display: flex;
  align-items: center;
}

.application-handling__review-area-main-heading-person-oid-row {
  margin-top: 5px;
}

.application-handling__review-area-main-heading-person-icon {
  font-size: 22px;
  vertical-align: bottom;
}

.application-handling__review-area-main-heading-person-oid {
  color: black;
  margin-left: 6px;
}

.application-handling__review-area-main-heading-applications-link {
  margin-left: 13px;
  padding-left: 13px;
  border-left: 1px solid @section-gray-border;
  font-size: 15px;
}

.application-handling__hakukohde-wrapper {
  margin-bottom: 5px;
}

.application-handling__review-area-hakukohde-heading {
  font-size: 14px;
  .semibold;
}

.application-handling__review-area-koulutus-heading {
  font-size: 14px;
}

.application-handling__review-header {
  color: @text-color;
  .semibold;
  margin-bottom: 8px;
}

.application-handling__review-header--language-requirement,
.application-handling__review-header--degree-requirement,
.application-handling__review-header--eligibility-state,
.application-handling__review-header--payment-obligation {
  font-weight: normal;
}

.application-handling__review-header--points {
  align-self: center;
  margin-bottom: 0;
}

.application-handling__review-state-container--columnar {
  flex-flow: column;
}

.application-handling__review-state-container .application-handling__review-header {
  padding-top: 8px;
}

.application-handling__review-state-container--columnar .application-handling__review-header {
  padding-top: 0;
}

.application-handling__review-row {
  display: flex;
}

.application-handling__review-row--nocolumn {
  display: block;
}

.application-handling__link-button {
  background-color: @link-color;
  border-radius: 3px;
  color: @white;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 41px;
}

.application-handling__link-button[disabled] {
  cursor: default;
  background-color: @sg-gray-lighten-3;
}

.application-handling__edit-link {
  width: 100%;
  margin-bottom: 10px;
}

.application-handling__information-request-container {
  padding: 15px;
  background-color: @element-header-background;
  border-radius: 3px;
  margin-bottom: 15px;
}

.application-handling__information-request-show-container-link {
  margin-bottom: 15px;
}

.application-handling__information-request-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 600;
}

.application-handling__information-request-header:not(:last-of-type) {
  margin-bottom: 8px;
}

.application-handling__information-request-row {
  position: relative;
}
/* ... */

